gitops/clusters/homelab/infrastructure/traefik-config/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - private-web-secure
  routes:
    - match: Host(`traefik.internal.pavel-usanli.online`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: cloudflare
